<resources>
    <string name="app_id">236888387285004</string>
    <string name="app_name">Food.vn</string>
    <string name="version"> Phiên bản </string>
    <string name="nameCompany">Phantom Food</string>
    <string name="loading"> Đang  tải</string>
    <string name="login">Đăng nhập</string>
    <string name="resgitter">Đăng ký </string>
    <string name="or">Hoặc</string>
    <string name="loginWithFaceBook">Đăng nhập bằng FaceBook</string>
    <string name="loginWithGoogle">Đăng nhập bằng Google</string>
    <string name="forgotPassword">Quên mật khẩu ?</string>
    <string name="restorePassword">Khôi phục mật khẩu</string>
    <string name="notMember">Bạn không phải thành viên ?</string>
    <string name="fullInfomation">Xin vui lòng điền đầy đủ thông tin </string>
    <string name="places">Ở chỗ nào ?</string>
    <string name="food">Ăn gì ??</string>
    <string name="newhot">Mới nhất</string>
    <string name="category">Danh mục</string>
    <string name="areaPlace">Khu vực</string>
    <string name="almostThere">Gần tới</string>
    <string name="delivery">Giao hàng</string>
    <string name="gameandfun">Game &amp;&amp; Fun</string>
    <string name="rate">Đánh giá</string>
    <string name="blogs">Blog</string>
    <string name="topMember">Top thành viên</string>
    <string name="order">Đặt món</string>

</resources>
