<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".View.SplashScreenActivity">


    <ImageView
        android:id="@+id/imgView_background"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:src="@drawable/foodytext" />

    <TextView
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgView_background"
        android:layout_centerHorizontal="true"
        android:text="@string/version"
        android:textSize="15dp" />
    <TextView
        android:id="@+id/tv_nameCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameCompany"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        />

    <LinearLayout
        android:layout_width="73dp"
        android:layout_height="19dp"
        android:layout_above="@id/tv_nameCompany"
        android:layout_centerHorizontal="true"


        android:layout_marginBottom="3dp">

        <ProgressBar
            android:id="@+id/progress_load"
            style="?attr/progressBarStyle"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_weight="1"></ProgressBar>

        <TextView
            android:id="@+id/tv_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            tools:text="@string/loading" />


    </LinearLayout>



</RelativeLayout>